# demoQtProject

./: CMakeLists.txt  README.md
src/data/: CMakeLists.txt
src/data/include/data/: ExampleInterfaceImpl.h
src/data/src/: ExampleInterfaceImpl.cpp
src/data/test/: test_ExampleInterfaceImpl.cpp
src/interfaces/: CMakeLists.txt
src/interfaces/include/interfaces/: IExampleInterface.h
src/qmlapp/: CMakeLists.txt  main.cpp
src/qmlapp/presentation/: QmlPresenter.cpp  QmlPresenter.h
src/qmlapp/qml/: BaseInjectorPage.qml  main.qml
src/qmlapp/usecase/: ExampleUsecase.cpp  ExampleUsecase.h
src/qmlinjector/src/: qmlinjector.cpp
